# grpc-web-hello

./: LICENSE  README.md
app/: .eslintrc.json  .gitignore  gatsby-config.ts  package.json
app/scripts/: generate-protos.sh
app/src/pages/: index.tsx
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  envoy.build.yml  envoy.dev.yml  envoy.yml
server/docker-deps/: run.sh
server/proto/: hello.proto
server/src/: main.rs  server.rs
