[package]
name = "grpc-web-hello"
version = "0.1.0"
authors = ["David Philipson <david.philipson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
tonic = "0.8.0"

[build-dependencies]
tonic-build = "0.8"
