[package]
name = "grpc-web-hello"
version = "0.1.0"
authors = ["David Philipson <david.philipson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors"] }

[build-dependencies]
tonic-build = "0.8.4"
